--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="author" content="yelo">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
+    <link href='http://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
     <title>Pokemon Quest Toolbox</title>
   </head>
   <body>
