--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="author" content="yelo">
+    <meta content="yes" name="apple-mobile-web-app-capable"/>
+    <meta content="blank" name="apple-mobile-web-app-status-bar-style"/>
+    <meta name="apple-touch-fullscreen" content="yes">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
     <link href='http://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
