feat: add favicon

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta content="blank" name="apple-mobile-web-app-status-bar-style"/>
     <meta name="apple-touch-fullscreen" content="yes">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
     <link href='http://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
     <title>Pokemon Quest Toolbox</title>
