--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>PokeQuest Wiki</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="author" content="yelo">
-    <meta content="yes" name="apple-mobile-web-app-capable"/>
-    <meta content="blank" name="apple-mobile-web-app-status-bar-style"/>
+    <meta name="description" content="Pokemon Quest Wiki">
+    <meta name="keywords" content="poke,pokemon,quest,wiki,dex,handbook,cookbook,recipe">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="blank">
     <meta name="apple-touch-fullscreen" content="yes">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
     <link href='http://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
-    <title>Pokemon Quest Toolbox</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but pokemon-quest-toolbox doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+
+    <img src="<%= BASE_URL %>favicon.png" style="position: fixed; z-index: -1; opacity: 0;" alt="thumbnail for wechat" />
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
