feat: import fonts with https

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" type="image/png" href="<%= BASE_URL %>favicon.png">
 
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
-    <link href='http://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <noscript>
