feat: enhance seo

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <title>PokeQuest Wiki</title>
     <meta charset="utf-8">
     <meta name="author" content="yelo">
-    <meta name="description" content="Pokemon Quest Wiki">
-    <meta name="keywords" content="poke,pokemon,quest,wiki,dex,handbook,cookbook,recipe">
+    <meta name="description" content="Pokemon Quest Wiki: recipes, evolution levels and everything">
+    <meta name="keywords" content="poke,pokemon,quest,wiki,dex,handbook,cookbook,recipe,recipes,bingo,bonus,moves,melee,range,type,color,mulligan">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
