--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<!DOCTYPE html><html><head><title>PokeQuest Wiki</title><meta charset=utf-8><meta name=author content=yelo><meta name=description content="Pokemon Quest Wiki: recipes, evolution levels and everything"><meta name=keywords content=poke,pokemon,quest,wiki,dex,handbook,cookbook,recipe,recipes,bingo,bonus,moves,melee,range,type,color,mulligan><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel="shortcut icon" href=/favicon.ico><link rel="shortcut icon" type=image/png href=/favicon.png><link rel=apple-touch-icon type=image/png href=/favicon.png><link href="https://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800" rel=stylesheet type=text/css><link as=style href=/static/css/app.66d2524f.css rel=preload><link as=style href=/static/css/chunk-vendors.dc305710.css rel=preload><link as=script href=/static/js/app.cbda65c5.js rel=preload><link as=script href=/static/js/chunk-vendors.8824f392.js rel=preload><link href=/static/css/2.184d1389.css rel=prefetch><link href=/static/css/3.58c87b7d.css rel=prefetch><link href=/static/css/4.cccedeed.css rel=prefetch><link href=/static/js/0.21009e35.js rel=prefetch><link href=/static/js/1.a3417ca1.js rel=prefetch><link href=/static/js/2.86b7b898.js rel=prefetch><link href=/static/js/3.e6f50834.js rel=prefetch><link href=/static/js/4.231062d6.js rel=prefetch><link href=/static/css/chunk-vendors.dc305710.css rel=stylesheet><link href=/static/css/app.66d2524f.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=/static/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/static/img/icons/favicon-16x16.png><link rel=manifest href=/manifest.json><meta name=theme-color content=#f2e3c5><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content="PokeQuest Wiki"><link rel=apple-touch-icon href=/static/img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=/img/icons/safari-pinned-tab.svg color=#f2e3c5><meta name=msapplication-TileImage content=/static/img/icons/mstile-144x144.png><meta name=msapplication-TileColor content=#f2e3c5></head><body><noscript><strong>We're sorry but pokemon-quest-toolbox doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><img src=/favicon.png style="position: fixed; z-index: -1; opacity: 0;" alt="thumbnail for wechat"><div id=app></div><script src=/static/js/chunk-vendors.8824f392.js></script><script src=/static/js/app.cbda65c5.js></script></body></html>
+<!DOCTYPE html><html><head><title>PokeQuest Wiki</title><meta charset=utf-8><meta name=author content=yelo><meta name=description content="Pokemon Quest Wiki: recipes, evolution levels and everything"><meta name=keywords content=poke,pokemon,quest,wiki,dex,handbook,cookbook,recipe,recipes,bingo,bonus,moves,melee,range,type,color,mulligan><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel="shortcut icon" href=/favicon.ico><link rel="shortcut icon" type=image/png href=/favicon.png><link rel=apple-touch-icon type=image/png href=/favicon.png><link href="https://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800" rel=stylesheet type=text/css><style type=text/css>#trouble {
+        font-size: 12px;
+        color: hsl(0,0%,30%);
+        margin: 4em 2em;
+        line-height: 1.5em;
+        display: none;
+      }
+      #trouble.show {
+        display: block;
+      }
+      #trouble p {
+        margin: 1em 0;
+      }
+      #trouble a {
+        color: hsl(0,0%,20%);
+        text-decoration: underline;
+      }</style><link as=style href=/static/css/app.38c074d1.css rel=preload><link as=style href=/static/css/chunk-vendors.dc305710.css rel=preload><link as=script href=/static/js/app.8de7095f.js rel=preload><link as=script href=/static/js/chunk-vendors.8824f392.js rel=preload><link href=/static/css/2.184d1389.css rel=prefetch><link href=/static/css/3.7fffe79c.css rel=prefetch><link href=/static/css/4.cccedeed.css rel=prefetch><link href=/static/js/0.21009e35.js rel=prefetch><link href=/static/js/1.a3417ca1.js rel=prefetch><link href=/static/js/2.d7e2e36f.js rel=prefetch><link href=/static/js/3.6e1b03f6.js rel=prefetch><link href=/static/js/4.231062d6.js rel=prefetch><link href=/static/css/chunk-vendors.dc305710.css rel=stylesheet><link href=/static/css/app.38c074d1.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=/static/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/static/img/icons/favicon-16x16.png><link rel=manifest href=/manifest.json><meta name=theme-color content=#f2e3c5><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content="PokeQuest Wiki"><link rel=apple-touch-icon href=/static/img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=/img/icons/safari-pinned-tab.svg color=#f2e3c5><meta name=msapplication-TileImage content=/static/img/icons/mstile-144x144.png><meta name=msapplication-TileColor content=#f2e3c5></head><body><noscript><strong>We're sorry but pokemon-quest-toolbox doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><img src=/favicon.png style="position: fixed; z-index: -1; opacity: 0;" alt="thumbnail for wechat"><div id=app><div id=trouble><h2>Oops!</h2><p>It seems like the browser took you a long time to load the resources of <strong><i>PokeQuest.Wiki</i></strong>.</p><p>Of course you can continue to wait for the load to complete, but if you're sure your network speed is super fast, please press <i>Ctrl+F5</i> or <i>Ctrl+Shift+R</i> to have your browser try again.</p><p>Or <a id=clear-service-workers>click here</a> to clean up PokeQuest's cached local files.</p><p>If you're still having trouble, please <a href=https://github.com/imyelo/pokequest-wiki/issues target=_blank>contact us here.</a></p></div></div><script>;(function () {
+        var TIMEOUT = 8 * 1000
+
+        var button = document.getElementById('clear-service-workers')
+        if (button) {
+          button.addEventListener('click', clear)
+        }
+
+        setTimeout(function () {
+          var div = document.getElementById('trouble')
+          if (div) {
+            div.className += 'show'
+          }
+        }, TIMEOUT)
+
+        function clear () {
+          try {
+            if (!navigator.serviceWorker) {
+              return
+            }
+            navigator.serviceWorker.getRegistrations().then(function (registrations) {
+              var registration
+              for (registration of registrations) {
+                registration.unregister()
+              }
+            }).then(function () {
+              window.location.reload()
+            })
+          } catch (error) {
+            window.alert(error)
+          }
+        }
+      })()</script><script src=/static/js/chunk-vendors.8824f392.js></script><script src=/static/js/app.8de7095f.js></script></body></html>
