feat: improve performance and accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>PokeQuest Wiki</title>
     <meta charset="utf-8">
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://www.pokequest.wiki/"/>
+    <link rel="alternate" hreflang="en" href="https://www.pokequest.wiki/" />
+    <link rel="alternate" hreflang="zh" href="https://www.pokequest.wiki/" />
     <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>favicon.png">
     <link rel="apple-touch-icon" type="image/png" href="<%= BASE_URL %>favicon.png">
@@ -48,7 +51,7 @@
         <p>It seems like the browser took you a long time to load the resources of <strong><i>PokeQuest.Wiki</i></strong>.</p>
         <p>Of course you can continue to wait for the load to complete, but if you're sure your network speed is super fast, please press <i>Ctrl+F5</i> or <i>Ctrl+Shift+R</i> to have your browser try again.</p>
         <p>Or <a id="clear-service-workers">click here</a> to clean up PokeQuest's cached local files. </p>
-        <p>If you're still having trouble, please <a href="https://github.com/imyelo/pokequest-wiki/issues" target="_blank">contact us here.</a></p>
+        <p>If you're still having trouble, please <a href="https://github.com/imyelo/pokequest-wiki/issues" target="_blank" rel="noopener">contact us here.</a></p>
       </div>
     </div>
 
