--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>favicon.png">
     <link rel="apple-touch-icon" type="image/png" href="<%= BASE_URL %>favicon.png">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,800" rel="stylesheet">
-    <!-- <link href='https://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,800" rel="stylesheet"> -->
+    <link href='https://fonts.font.im/css?family=Open+Sans:400,300,600,400italic,800' rel='stylesheet' type='text/css'>
 
     <style type="text/css">
       #trouble {
